# image-lens

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.lite.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260421_0001_initial_schema.py
docs/: acceptance-checklist.md  api.md  architecture.md  interview-script.md  runbook.md  trade-offs.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  runtime.ts  styles.css  vite-env.d.ts
frontend/src/components/: ApiKeyInput.tsx
scripts/: dry_run_demo.py  seed_demo.py  validate_claude_and_record_vcr.py
src/: config.py  main.py  worker.py
src/analyzers/: circuit_breaker.py  factory.py  mock.py  protocol.py
src/api/: routes.py
src/db/: models.py  session.py
src/domain/: errors.py  schemas.py
src/observability/: logging.py  metrics.py  problem.py  tracing.py
src/queue/: factory.py  in_memory.py  rq_queue.py
src/reports/: renderer.py
src/security/: auth.py  rate_limit.py  validation.py
src/services/: analysis.py  ids.py  processor.py  sweepers.py  webhook_dispatcher.py
src/storage/: factory.py  local.py  minio_store.py  protocol.py  unavailable.py
tests/: conftest.py  test_claude_analyzer.py  test_mock_analyzer.py  test_security_validation.py  test_services_analysis.py  test_webhook_dispatcher.py
tests/chaos/: test_rate_limit.py  test_sweepers.py
tests/contract/: test_claude_path_vcr.py
tests/integration/: test_api_integration.py
tests/load/: test_load_smoke.py
(+7 files in other folders)
